--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,67 +15,46 @@
   justify-content: center;
   width: 100vw;
   min-height: 100vh;
-  padding: 0 24px;
   overflow: hidden;
 }
 
-.pageContainer {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  max-width: 600px;
-  width: 100%;
-  gap: 2%;
-  padding: 3rem;
-}
-
-.secondaryButton {
-  cursor: pointer;
-  text-align: center;
-  padding: 5px;
-  color: #fff;
-  font-weight: 600;
-}
-
-.mainButton {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  white-space: nowrap;
-  vertical-align: middle;
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-  line-height: 1;
-  font-weight: 600;
-  transition: background-color 200ms, border-color 200ms, color 200ms, fill 200ms, stroke 200ms, opacity 200ms, box-shadow 200ms, transform 200ms;
-  height: 3rem;
-  min-width: 3rem;
-  font-size: 0.75rem;
-  background: #e5e5ea;
-  background-image: linear-gradient(to left, #cc25b3 0%, #418dff 101.52%);
-  color: #fff;
-  width: 180px;
-  text-align: center;
-  border-radius: 9999px;
-  border-style: none;
-}
-
-.mainButton:hover {
-  opacity: 0.8;
-}
-
 .collectionContainer {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1366px;
+  justify-content: center;
+  width: 1366px;
+  max-width: 100%;
+  height: 100vh;
+  padding: 0 24px;
+  overflow: scroll;
 }
 
-.divider {
-  width: 50%;
-  border-color: grey;
-  opacity: 0.25;
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  padding: 0 24px;
+  font-size: 0.75rem;
+  color: gray;
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  padding: 0 24px;
 }
 
 .nftBoxGrid {
@@ -83,10 +62,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 1%;
-  flex-wrap: wrap;
-  width: 1200px;
-  max-width: 100%;
+  gap: 1em;
+  width: 100%;
+  padding: 0 24px;
 }
 
 .nftBox {
@@ -94,6 +72,7 @@
   min-height: 200px;
   border: 1px solid #333;
   border-radius: 16px;
+  margin: 1em 0;
   padding-bottom: 1em;
   overflow: hidden;
 }
@@ -118,47 +97,11 @@
 /* iPhone Breakpoints */
 @media only screen and (max-width: 767px) {
   .nftBox {
-    width: 100%;
+    width: 50%;
   }
-}
-
-.spacerTop {
-  margin-top: 16px;
-}
-
-.bigSpacerTop {
-  margin-top: 32px;
-}
-
-.spacerBottom {
-  margin-bottom: 16px;
-}
-
-.detailPageContainer {
-  max-width: 800px;
-}
-
-.detailPageHr {
-  margin-top: 0;
-  margin-bottom: 32px;
-}
-
-.lightPurple {
-  color: #e011a7;
 }
 
 .nftMedia {
   width: 100%;
   max-height: 300px;
-}
-
-.noGapBottom {
-  margin-bottom: 0;
-}
-
-.centered {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
