--- a/webapp/styles/Home.module.css
+++ b/webapp/styles/Home.module.css
@@ -28,7 +28,6 @@
   max-width: 100%;
   height: 100vh;
   padding: 0 24px;
-  overflow: auto;
 }
 
 .footer {
@@ -57,14 +56,22 @@
   padding: 0 24px;
 }
 
+.logo {
+  filter: brightness(0) invert(1);
+  opacity: .42;
+}
+
 .nftBoxGrid {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   gap: 1em;
+  height: 100vh;
+  overflow: auto;
+  padding: 80px 24px;
   width: 100%;
-  padding: 0 24px;
 }
 
 .nftBox {
